--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.18",
@@ -34,6 +36,7 @@
     "dom-to-image": "^2.6.0",
     "file-loader": "^1.1.7",
     "file-saver": "^1.3.3",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "url-loader": "^0.6.2"
